# CEmbeddedHttpd

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  config.h.in  configure.ac
common/: Makefile.am  example1.c  example1.h  example2.c  example3.c  example4.c  example5.c  example6.c  libmicro.h
libexamples/: Makefile.am  examples.c
libexamples/include/: Makefile.am  libexamples.h
libqueryhandler/: Makefile.am  libqueryhandler.c  libquerymock.c
libqueryhandler/include/: Makefile.am  libqueryhandler.h  libquerymock.h
libqueryhandler/unittest/: Makefile.am  queryhandler.c  testbasic.c  testcurl.c  testfavicon.c  testheader.c  testhttp10.c  testmock.c  testparamget.c  testparampost.c  testparams.c  testpost.c
src/: Makefile  Makefile.am  Makefile.in  main.c
